модальне вікно з іконками

--- a/portfolio.html
+++ b/portfolio.html
@@ -230,6 +230,19 @@
     </ul>
 </div>
 
+<form action="footer-form">
+    <label for="footer-label">
+        <p class="footer-lable-text">Подпишитесь на рассылку</p>
+        <input class="footer-input" type="email" name="footer-email" id="" placeholder="E-mail">
+    </label>
+    <button type="submit" class="footer-button">
+        <p class="footer-button-text">Подписаться</p>
+        <svg class="icon-send" width="24px" height="24px">
+            <use href="./images/icons.svg#icon-send"></use>
+        </svg>
+    </button>
+
+</form>
     </div>
 </footer>
 </body>
