--- a/index.html
+++ b/index.html
@@ -359,6 +359,20 @@
         </li>
       </ul>
     </div>
+
+    <form action="footer-form">
+<label for="footer-label">
+  <p class="footer-lable-text">Подпишитесь на рассылку</p>
+  <input class="footer-input" type="email" name="footer-email" id="" placeholder="E-mail" >
+</label>
+<button type="submit" class="footer-button">
+  <p class="footer-button-text">Подписаться</p>
+  <svg class="icon-send" width="24px" height="24px">
+    <use href="./images/icons.svg#icon-send"></use>
+  </svg>
+</button>
+
+    </form>
   </div>
        
   </footer>
@@ -369,6 +383,52 @@
         <svg class="close-icon" width="18" height="18"> <use href="./images/icons.svg#close-black"></use>
         </svg>
       </button>
+      
+      <p class="modal-title"> Оставьте свои данные, мы вам перезвоним</p>
+      <form action="#" class="modal-form">
+        <div class="modal-form-field">
+        <label for="user-name" class="modal-input-text">Имя</label>
+        <div class="modal-input-wrap">
+<input type="text" name="user-name" class="modal-input" required id="user-name">
+<svg class="input-icon" width="18" height="18">
+  <use href="./images/icons.svg#person-black"></use>
+</svg>
+</div>
+
+</div>
+<div class="modal-form-field">
+<label for="user-tel" class="modal-input-text">Телефон</label>
+
+<div class="modal-input-wrap">
+<input type="tel" name="user-tel" class="modal-input" required id="user-tel">
+<svg class="input-icon" width="18" height="18">
+  <use href="./images/icons.svg#phone-black"></use>
+</svg>
+</div>
+</div>
+<div class="modal-form-field">
+<label for="user-email" class="modal-input-text">Почта</label>
+
+<div class="modal-input-wrap">
+<input type="email" name="user-email" class="modal-input" id="user-email" >
+<svg class="input-icon" width="18" height="18">
+  <use href="./images/icons.svg#email-black"></use>
+</svg>
+</div>
+</div>
+<div class="modal-form-field">
+  <label for="user-text" class="modal-input-text">Комментарий</label>
+  <textarea name="user-text" id="user-text" class="modal-textarea" placeholder="Введите текст"></textarea>
+</div>
+
+<div class="modal-form-field">
+  <input type="checkbox" name="" id="">
+  <label for="">Соглашаюсь с рассылкой и принимаю Условия договора</label>
+</div>
+
+
+<button type="submit" class="button-modal">Отправить</button>
+      </form>
     </div>
   </div>
   <script src="./js/modal.js"></script>
