--- a/index.html
+++ b/index.html
@@ -422,8 +422,13 @@
 </div>
 
 <div class="modal-form-field">
-  <input type="checkbox" name="" id="">
-  <label for="">Соглашаюсь с рассылкой и принимаю Условия договора</label>
+  <input type="checkbox" name="policy" id="modal-check" class="modal-check visually-hidden">
+  <label for="modal-check" class="modal-check-text"><span class="check-span">
+    <svg class="icon-check" width="16" height="15">
+      <use href="./images/icons.svg#icon-check"></use>
+    </svg>
+  </span>Соглашаюсь с рассылкой и принимаю 
+  <a href="" class="policy-text"> &nbspУсловия договора</a></label>
 </div>
 
 
